--- a/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
+++ b/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
@@ -1,8 +1,8 @@
 
 <mat-card>
-    <mat-card-title>Employee</mat-card-title>
+    <mat-card-title style="margin: 20px;">Employee</mat-card-title>
     <mat-card-subtitle>{{EmployeeName}}</mat-card-subtitle>
-    <mat-card-content style="margin:5px;max-height: inherit;">
+    <mat-card-content style="margin:20px;max-height: inherit;">
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
