--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,8 +2,8 @@ footer{
     display:flex;
     justify-content: center;
     padding:10px;
-    color:white;
-    background-color:var(--maincolor1);// #98bcda;
+    //color:white;
+    background-color:#ffe77aff;
     font-size: small;
     //max-width: 81%;
 }
