--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -43,7 +43,7 @@
                         User name must be at least 6 characters long.
                     </div>                     -->
                 </div>
-                <div *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)" class="alert alert-danger">
+                <!-- <div *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)" class="alert alert-danger">
 
                     <div *ngIf="f.password.errors?.['required']">
                         password is required.
@@ -51,7 +51,7 @@
                     <div *ngIf="f.password.errors?.['minlength']">
                         password must be at least 6 characters long.
                     </div>                    
-                </div>
+                </div> -->
             </form>
         <!-- </div> -->
         <div class="alert alert-success col-md-12" *ngIf="isLoggedIn">
