student detail, employee photo insert/display completed

--- a/src/app/modules/employeedetail/employee/employee.component.html
+++ b/src/app/modules/employeedetail/employee/employee.component.html
@@ -1,4 +1,4 @@
-<div style="font-weight:bold;padding: 15px 0px 0px 0px;">Employee Detail</div>
+<div style="font-weight:bold;padding: 15px 15px 15px 0px;">Employee Detail</div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <alert></alert>
 <form [formGroup]="EmployeeForm">
@@ -9,7 +9,7 @@
                 <mat-icon>info</mat-icon>Primary
             </ng-template>
             <div style="margin:15px 15px 15px 15px;"><strong>Primary</strong></div>
-            <mat-grid-list cols="3" rowHeight="70px" #basic>
+            <mat-grid-list cols="3" rowHeight="90px" #basic>
 
                 <mat-grid-tile [colspan]="1" [rowspan]="1">
                     <mat-form-field appearance="outline" fxFlex>
@@ -26,25 +26,25 @@
                         <input formControlName="LastName" autocomplete="Off" #input matInput [maxlength]="30">
                     </mat-form-field>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan]="1" [rowspan]="2">
-                    <div *ngIf="EmployeeId>0" fxLayout="column" fxLayoutAlign="space-between center">
+                <mat-grid-tile [colspan]="1" [rowspan]="2" style="display: flex;justify-content: end;">
+                    <div *ngIf="EmployeeId>0" fxLayout="row" fxLayoutAlign="space-between center">
                         <span style="color:red;" *ngIf="message">{{message}}</span>
-                        <div style="padding-bottom: 15px;">
-                            <input #inputfile [hidden]="true" type="file" accept='image/*'
+                        <input #inputfile [hidden]="true" type="file" accept='image/*'
                                 (change)="preview(inputfile.files)" />
-                            <img [src]="imgURL" height="160" *ngIf="imgURL">
+                        <div style="border:1px solid lightgray; padding:5px;margin-top: 5px;margin-bottom: 5px;">                            
+                            <img [src]="imgURL" height="150px" *ngIf="imgURL">
                         </div>
-                        <div fxLayout="row" fxLayoutAlign="space-between center">
-                            <span>
-                                <button [disabled]="loading" class="mat-raised-button" matTooltip="select file"
-                                    color="primary" (click)="inputfile.click()">
+                        <div style="margin: 5px;" fxLayout="column" fxLayoutAlign="center center">
+                            
+                                <button [disabled]="loading" class="mat-flat-button" matTooltip="select file"
+                                    (click)="inputfile.click()">
                                     <mat-icon aria-label="photo">photo</mat-icon>
                                 </button>&nbsp;&nbsp;
                                 <button [disabled]="loading" type="submit" (click)="uploadFile()"
-                                    matTooltip="upload file" class="mat-raised-button">
+                                    matTooltip="upload file" class="mat-flat-button">
                                     <mat-icon aria-label="file_upload">file_upload</mat-icon>
                                 </button>&nbsp;&nbsp;
-                            </span>
+                            
                         </div>
                     </div>
                 </mat-grid-tile>
@@ -507,6 +507,7 @@
     </mat-tab-group>
 </form>
 <!-- </div> -->
-<button [disabled]="loading" (click)="back()" class="mat-raised-button">
+<div style="display: flex;justify-content: center;margin: 15px;"><button [disabled]="loading" (click)="back()" class="mat-raised-button">
     <mat-icon>arrow_back</mat-icon>
 </button>
+</div>
