--- a/src/app/modules/DataUploadDownload/generalreportboard/generalreportboard.component.html
+++ b/src/app/modules/DataUploadDownload/generalreportboard/generalreportboard.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-    <mat-card-title>Data</mat-card-title>
+    <mat-card-title style="margin: 20px;">Upload/Download</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content style="margin:5px;max-height: inherit;">
+    <mat-card-content style="margin: 20px;">
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
