--- a/src/app/modules/classes/classdetail/classdetail.component.scss
+++ b/src/app/modules/classes/classdetail/classdetail.component.scss
@@ -1,12 +1,12 @@
 mat-form-field{
-    margin-right: 15px;
-    width:99%;
+//    margin-right: 15px;
+    width:98%;
 }
 button{
     margin-right: 15px;
 }
 .mat-column-ClassName{
-    flex: 1 1 150px;
+    flex: 0 0 150px;
     padding-left: 0px;
 }
 .mat-column-StartDate,.mat-column-EndDate,.mat-column-StudyAreaId,.mat-column-StudyModeId{
@@ -21,7 +21,7 @@ button{
 }
 .mat-column-Sequence,.mat-column-DurationId,.mat-column-Active{
     justify-content: center;
-    flex: 1 1 80px;
+    flex: 0 0 80px;
 }
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
     border-radius: 0px !important;
