--- a/src/app/modules/globaladmininitial/customerplans/customerplans.component.scss
+++ b/src/app/modules/globaladmininitial/customerplans/customerplans.component.scss
@@ -1,6 +1,6 @@
 :host{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     min-height: 92vh;
     background-color: white;
 }
