--- a/src/app/modules/schoolreports/examtimetable/examtimetable.component.html
+++ b/src/app/modules/schoolreports/examtimetable/examtimetable.component.html
@@ -45,12 +45,16 @@
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
-            <p>Record will be displayed if it is defined in Subjects in Slot.</p>
-            <span id="printSection">
+            <!-- <p>Record will be displayed if it is defined in Subjects in Slot.</p> -->
+            <span id="printSection">               
                 <mat-table #table [dataSource]="dataSource" style="min-width: 600px;">
                     <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
                         matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef>
+                        <mat-header-cell [attr.rowspan]="NoOfColumn" *matHeaderCellDef style="height: 0px;justify-content: center;">
+                            <div *ngIf="SlotNClassSubjects.length>0 && colIndex==0" style="width:100%; display: flex;flex-direction: column;justify-content: center;">
+                                <div style="font-size: large;">{{SelectedExamName}} Time Table</div>
+                                <div> for {{SelectedClasses}}</div>
+                            </div>
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element" [innerHTML]="element[disCol]">
                         </mat-cell>
@@ -59,10 +63,12 @@
                     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
                 </mat-table>
             </span>
-            <button [disabled]="loading" matTooltip="print" printSectionId="printSection" [useExistingCss]="true"
-                ngxPrint class="mat-raised-button">
-                <mat-icon>print</mat-icon>
-            </button>
+            <div style="display: flex;flex-direction: row;justify-content: center;">
+                <button [disabled]="loading" matTooltip="print" style="margin: 15px;" printSectionId="printSection"
+                    [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                    <mat-icon>print</mat-icon>
+                </button>
+            </div>
         </div>
     </div>
 </div>
