--- a/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
+++ b/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
@@ -2,7 +2,7 @@
 <alert></alert>
 <form [formGroup]="SearchForm">
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px">
-        <mat-form-field [style.width.px]="250">
+        <mat-form-field [style.width.px]="250" appearance="outline">
             <mat-label>Name-class-section-roll no</mat-label>
             <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
