--- a/src/app/shared/components/right/right.component.html
+++ b/src/app/shared/components/right/right.component.html
@@ -1,3 +1,3 @@
-<div fxHide.lt-lg class="content">
+<!-- <div fxHide.lt-lg class="content">
     <app-newsdashboard></app-newsdashboard>    
-</div>
+</div> -->
