--- a/src/app/modules/photogallery/photofileboard/photofileboard.component.html
+++ b/src/app/modules/photogallery/photofileboard/photofileboard.component.html
@@ -1,9 +1,9 @@
 
 <mat-card>
-    <mat-card-title style="margin: 20px;">Initial Setting</mat-card-title>
+    <mat-card-title style="margin: 20px;">Photo/Files</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:20px;max-height: inherit;">
-        <mat-tab-group style="max-width: 1400px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
                     <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
