--- a/src/app/modules/Accounting/accountingboard/accountingboard.component.html
+++ b/src/app/modules/Accounting/accountingboard/accountingboard.component.html
@@ -1,1 +1,17 @@
-<p>accountingboard works!</p>
+
+<mat-card>
+    <mat-card-title style="margin: 20px;">Accounting</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-content style="margin:20px;max-height: inherit;">
+        <mat-tab-group style="max-width: 1400px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+            <mat-tab *ngFor="let component of components;let indx=index">
+                <ng-template mat-tab-label>
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
+                </ng-template>
+                <ng-template matTabContent>
+                    <div #container></div>
+                </ng-template>
+            </mat-tab>
+        </mat-tab-group>
+    </mat-card-content>
+</mat-card>
