--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -56,7 +56,7 @@
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="PaymentType">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Receipt Type </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Account </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 {{element.PaymentType}}
             </mat-cell>
